--- a/style.scss
+++ b/style.scss
@@ -102,6 +102,14 @@ body {
       width: 195px;
       color: #333;
 
+      & .player:first-child {
+        margin-bottom: -1px;
+      }
+
+      & .player:last-child {
+        margin-bottom: 1px;
+      }
+
       .player {
         height: 25px;
         font-size: 13px;
